// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled Anchor tests render tests should render correctly default state 1`] = `
<a
  aria-disabled="false"
  class="css-1dwh1c3"
  data-testid="foo-bar"
  href="foo"
>
  bar
</a>
`;

exports[`Styled Anchor tests render tests should render correctly disabled state 1`] = `
<a
  aria-disabled="true"
  class="css-1w3ikts"
  data-testid="foo-bar"
  href="foo"
>
  bar
</a>
`;
